[package]
name = "ricecoder-help"
version.workspace = true
edition = "2021"
authors = ["RiceCoder Contributors"]
description = "Help system and documentation for RiceCoder TUI"
license = "MIT"
repository = "https://github.com/moabualruz/ricecoder"
homepage = "https://github.com/moabualruz/ricecoder"
documentation = "https://github.com/moabualruz/ricecoder/wiki"

[lib]
name = "ricecoder_help"
path = "src/lib.rs"

[dependencies]
ratatui = { workspace = true }
crossterm = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }