[package]
name = "ricecoder-hooks"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/moabualruz/ricecoder"
homepage = "https://github.com/moabualruz/ricecoder"
documentation = "https://github.com/moabualruz/ricecoder/wiki"
description = "Event-driven hooks system for RiceCoder"

[lib]
name = "ricecoder_hooks"
path = "src/lib.rs"

[dependencies]
ricecoder-storage = { path = "../ricecoder-storage", version = "0.1" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }




