[package]
name = "ricecoder-images"
description = "Image support with drag-and-drop, analysis, caching, and terminal display"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/moabualruz/ricecoder"
homepage = "https://github.com/moabualruz/ricecoder"
documentation = "https://github.com/moabualruz/ricecoder/wiki"

[dependencies]
ricecoder-storage = { path = "../ricecoder-storage", version = "0.1" }
ricecoder-providers = { path = "../ricecoder-providers", version = "0.1" }
ricecoder-files = { path = "../ricecoder-files", version = "0.1" }
image = "0.24"
usvg = "0.37"
resvg = "0.37"
tiny-skia = "0.11"
sha2 = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }
