[package]
name = "ricecoder-images"
description = "Image support with drag-and-drop, analysis, caching, and terminal display"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/moabualruz/ricecoder"
homepage = "https://github.com/moabualruz/ricecoder"
documentation = "https://github.com/moabualruz/ricecoder/wiki"

[dependencies]
ricecoder-storage = { workspace = true }
ricecoder-providers = { workspace = true }
ricecoder-files = { workspace = true }
image = { workspace = true }
usvg = { workspace = true }
resvg = { workspace = true }
tiny-skia = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }

# DI registration (via ricecoder-common to avoid circular deps)
ricecoder-common = { workspace = true }
inventory = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }
