[package]
name = "ricecoder-industry"
version.workspace = true
edition = "2021"
authors = ["RiceCoder Contributors"]
description = "Enterprise integrations and OAuth authentication for RiceCoder"
license = "MIT"
repository = "https://github.com/moabualruz/ricecoder"
homepage = "https://github.com/moabualruz/ricecoder"
documentation = "https://github.com/moabualruz/ricecoder/wiki"
keywords = ["enterprise", "oauth", "authentication", "integrations", "security"]

[lib]
name = "ricecoder_industry"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true }
oauth2 = { workspace = true }
url = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }
async-trait = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
jwt = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }

# RiceCoder internal dependencies
ricecoder-security = { workspace = true }
ricecoder-domain = { workspace = true }

# DI registration (via ricecoder-common to avoid circular deps)
ricecoder-common = { workspace = true }
inventory = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio-test = { workspace = true }
mockito = { workspace = true }
tempfile = { workspace = true }