[package]
name = "ricecoder-keybinds"
version = "0.1.0"
edition = "2021"
authors = ["RiceCoder Contributors"]
description = "Keybind customization with conflict detection and profile management"
license = "MIT"
repository = "https://github.com/moabualruz/ricecoder"
homepage = "https://github.com/moabualruz/ricecoder"
documentation = "https://github.com/moabualruz/ricecoder/wiki"

[lib]
name = "ricecoder_keybinds"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
tracing = "0.1"
dirs = "5.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"

[dev-dependencies]
proptest = "1.4"
tokio-test = "0.4"
tempfile = "3.8"
lazy_static = "1.4"


