[package]
name = "ricecoder-keybinds"
version.workspace = true
edition = "2021"
authors = ["RiceCoder Contributors"]
description = "Keybind customization with conflict detection and profile management"
license = "MIT"
repository = "https://github.com/moabualruz/ricecoder"
homepage = "https://github.com/moabualruz/ricecoder"
documentation = "https://github.com/moabualruz/ricecoder/wiki"

[lib]
name = "ricecoder_keybinds"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }
lazy_static = { workspace = true }


