[package]
name = "ricecoder-learning"
version = "0.1.0"
edition = "2021"
authors = ["RiceCoder Contributors"]
description = "Learning system for RiceCoder - captures and applies learned rules"
license = "MIT"
repository = "https://github.com/moabualruz/ricecoder"
homepage = "https://github.com/moabualruz/ricecoder"
documentation = "https://github.com/moabualruz/ricecoder/wiki"

[lib]
name = "ricecoder_learning"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
tracing = "0.1"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5.0"
regex = "1.10"
md5 = "0.7"
ricecoder-storage = { path = "../ricecoder-storage", version = "0" }

[dev-dependencies]
proptest = "1.4"
tokio-test = "0.4"
tempfile = "3.8"
itertools = "0.12"




