[package]
name = "ricecoder-learning"
version.workspace = true
edition = "2021"
authors = ["RiceCoder Contributors"]
description = "Learning system for RiceCoder - captures and applies learned rules"
license = "MIT"
repository = "https://github.com/moabualruz/ricecoder"
homepage = "https://github.com/moabualruz/ricecoder"
documentation = "https://github.com/moabualruz/ricecoder/wiki"

[lib]
name = "ricecoder_learning"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["full"] }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }
dirs = { workspace = true }
regex = { workspace = true }
md5 = { workspace = true }
ricecoder-storage = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }
itertools = { workspace = true }




